...
            "value" : "Акумулятор"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "needs_review",
            "value" : "电池"
          }
        }
      }
    },
    "Battery Information" : {
      "extractionState" : "stale",
...
            "state" : "needs_review",
            "value" : "https://github.com/pear-devs/pear-desktop"
          }
        }
      }
    },
    "HUD" : {

    },
    "HUD style" : {
      "extractionState" : "stale",
      "localizations" : {
        "ar" : {
...
    "展开态指示器" : {

    },
    "展开态显示 HUD" : {

    },
    "展开态显示电池指示器" : {

    },
    "展开态显示百分比" : {

    },
    "展开时缩放圆角" : {
...
